# es_fe

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.hpp  field.hpp  mesh.hpp  nonlinear_system.hpp  solution_view.hpp  types.hpp  var.hpp  var_list.hpp
dof/: dof_index.hpp
element/: lagrange.hpp  linear_element.hpp
element/lagrange/: element_quadr_lagrange_2.hpp  lagrange_base_1.hpp  util.hpp
include/es_fe/: boundary_cond.hpp  config.hpp  field.hpp  forward.hpp  geom.hpp  geometry.hpp  math.hpp  mesh.hpp  nonlinear_system.hpp  solution_view.hpp  system.hpp  type_traits.hpp  types.hpp  var.hpp  var_base.hpp  var_list.hpp
include/es_fe/boundary_cond/: boundary_cond.hpp  boundary_cond_base1.hpp  boundary_cond_base2.hpp  const_boundary_cond.hpp  uniform_boundary_cond.hpp
include/es_fe/dof/: dof_index.hpp  dof_mapper.hpp  dof_mapper1.hpp  dof_mapper2.hpp  dof_mapper_base.hpp  dof_mapper_util.hpp  layered_dof_mapper.hpp  tools.hpp
include/es_fe/element/: lagrange.hpp  linear_element.hpp  misc_elements.hpp  triangular_element.hpp
include/es_fe/element/lagrange/: element_quadr_lagrange.hpp  util.hpp  (+4 more)
include/es_fe/geom/: algorithm.hpp  compare.hpp  geometry.hpp  linear_grid.hpp  linestring.hpp  point.hpp  points.hpp  polygon.hpp  rect.hpp  segment.hpp
include/es_fe/geometry/: algorithm.hpp  geometry.hpp  linear_grid.hpp  linestring.hpp  point1.hpp  point2.hpp  points2.hpp  polygon.hpp  rect.hpp  segment.hpp
include/es_fe/io/: matlab_writer.hpp  matlab_writer1.hpp  matlab_writer2.hpp  vtk_writer.hpp  vtk_writer_3d.hpp
include/es_fe/math/: gradients.hpp  jacobian.hpp  matrix.hpp  quadr.hpp  ref_map.hpp
include/es_fe/matrix_based/: eigen_solution_view.hpp  eigen_solver.hpp  matrix_asm_base.hpp  nonlinear_solver.hpp  par_cell_assembler.hpp  seq_assembler.hpp  seq_cell_assembler.hpp  solution.hpp  solution_base.hpp  solution_view.hpp  solution_view1.hpp  solver.hpp  solver_base.hpp  tbb_assembler.hpp
include/es_fe/mesh/: base.hpp  edge_chain.hpp  edge_chain_iterator.hpp  function.hpp  halfedge_structure.hpp  io.hpp  iterator.hpp  mesh.natvis  mesh1.hpp  mesh2.cpp_  mesh2.hpp  tensor_mesh.hpp  view.cpp_  view_iterator_impl.hpp  voronoi_data.hpp
include/es_fe/types/: forward.hpp  index.hpp  tags.hpp  types.hpp
include/es_fe/util/: algorithm.hpp  mesh_element_vars_map.hpp  mesh_vars_map.hpp  quad_tree.hpp
include/esf/: nonlinear_system.hpp  system.hpp  type_traits.hpp  var.hpp  var_base.hpp  var_list.hpp
include/esf/boundary_cond/: boundary_cond.hpp  boundary_cond_base1.hpp  boundary_cond_base2.hpp  uniform_boundary_cond.hpp
include/esf/dof/: dof_index.hpp  dof_mapper1.hpp  dof_mapper2.hpp  dof_mapper_base.hpp  dof_mapper_util.hpp  layered_dof_mapper.hpp  tools.hpp
include/esf/element/: lagrange.hpp  linear_element.hpp  misc_elements.hpp  triangular_element.hpp
include/esf/geometry/: geometry.hpp  linear_grid.hpp  linestring.hpp  point1.hpp  point2.hpp  points2.hpp  polygon.hpp  rect.hpp
include/esf/io/: matlab_writer1.hpp  matlab_writer2.hpp  vtk_writer.hpp  vtk_writer_3d.hpp
include/esf/math/: gradients.hpp  jacobian.hpp  matrix.hpp  ref_map.hpp
include/esf/matrix_based/: eigen_solution_view.hpp  eigen_solver.hpp  nonlinear_solver.hpp  par_cell_assembler.hpp  solution.hpp  solution_base.hpp  solution_view.hpp  solver.hpp  solver_base.hpp  tbb_assembler.hpp
include/esf/mesh/: edge_chain.hpp  exception.hpp  function.hpp  halfedge_structure.hpp  mesh1.hpp  mesh2.hpp  tensor_mesh.hpp  voronoi_data.hpp
include/esf/types/: forward.hpp  index.hpp
include/esf/util/: algorithm.hpp  mesh_element_vars_map.hpp  mesh_vars_map.hpp  quad_tree.hpp
io/: matlab_writer.cpp  matlab_writer.hpp
math/dunavant/: data.hpp  points_group.hpp
math/gauss/: data.hpp
matrix_based/: matrix_asm_base.hpp  seq_assembler.hpp
mesh/: edge_chain.hpp  edge_chain_iterator.hpp  exception.hpp  io.hpp  iterator.hpp  mesh1.hpp  mesh2.cpp  tensor_mesh.hpp  view.cpp
mesh/algorithm/: vertices_in_linestrip.hpp
mesh/halfedge_structure/: add_cell_impl.hpp  capacity_impl.hpp  find_impl.hpp  halfedge_structure.hpp
mesh/io/: gmsh.cpp  gmsh.hpp
mesh/iterator/: circulator_vertex_face.hpp  random_access.hpp
mesh/mesh2/: view_iterator_impl.hpp
mesh/view/: face_mesh2_impl.hpp  halfedge_mesh2.hpp  vertex_mesh2.hpp  view.hpp
pretty_printer/: es_fe.natvis
pretty_printer/es_fe/: printer.py
src/geom/: geometry.cpp  point.cpp  point1.cpp  point2.cpp
src/mesh/: element_view.mesh2.cpp  element_view_mesh2.cpp  halfedge_structure.add_cell.cpp  halfedge_structure.capacity.cpp  halfedge_structure.check.cpp  halfedge_structure.cpp  halfedge_structure.find.cpp  halfedge_structure.is_boundary.cpp  halfedge_structure.prev_next.cpp  halfedge_structure_add_cell.cpp  halfedge_structure_capacity.cpp  halfedge_structure_check.cpp  halfedge_structure_find.cpp  halfedge_structure_is_boundary.cpp  halfedge_structure_prev_next.cpp  mesh1.capacity.cpp  mesh1.cpp  mesh1.iterator.cpp  mesh2.cpp  mesh2.iterator.cpp  mesh2.view.cpp  mesh2_iterator.cpp  mesh2_view.cpp  view_mesh2.cpp
src/mesh/algorithm/: elements_in_linestring.cpp  linestring.cpp
src/mesh/halfedge_structure/: check.cpp
src/mesh/io/: gmsh.cpp  gmsh_file_reader.cpp  gmsh_file_reader.hpp
src/mesh/mesh2/: stream_out.cpp
src/mesh/view/: edge.mesh1.cpp  edge.mesh2.cpp  edge_mesh2.cpp  face.mesh2.cpp  halfedge.mesh2.cpp  halfedge_mesh2.cpp  vertex.mesh1.cpp  vertex.mesh2.cpp  vertex_mesh2.cpp
test/: CMakeLists.txt  test.cpp
test/element/: linear_element.hpp  triangular_element.hpp
test/src/: var.cpp
test/src/element/: lagrange2.cpp  linear_element.cpp  triangular_element.cpp
test/src/mesh/: 1.cpp  construct_mesh2.hpp  mesh2.cpp  mesh2_view.cpp
util/: quad_tree.hpp
(+90 files in other folders)
